# kernel

./: .gitignore  CMakeLists.txt  README.md  config.mk
k/: CMakeLists.txt  Makefile  allocator.c  allocator.h  binary.c  binary.h  console.c  console.h  cpu.h  crt0.S  elf.c  elf.h  gdt.c  gdt.h  getkey.c  getkey.h  idt.c  idt.h  interrupt-entry.S  interrupt-handler.c  io.h  k.c  k.lds  keyboard.h  kfilesystem.c  kfilesystem.h  libvga.c  libvga.h  macros_isr.def  multiboot.h  paging.c  paging.h  physical-memory.c  physical-memory.h  pic.c  pic.h  pit.c  pit.h  serial.c  serial.h  (+12 more)
k/include/: ascii.h  compiler.h  cpu.h  error.h  fs.h  keymap.us.txt  kfs.h  kstdio.h  list.h  multiboot.h  stdio.h  string.h  utils.h
k/include/k/: kfs.h  kstd.h  ktypes.h  types.h
k/io/: ata.c  ata.h  cmos.c  cmos.h  filesystem.c  filesystem.h  filesystem2.c  filesystem2.h  io.h  keyboard.c  keyboard.h  kfilesystem.c  kfilesystem.h  libvga.c  libvga.h  mouse.c  mouse.h  pic.c  pic.h  pipe.c  pipe.h  pit.c  pit.h  serial.c  serial.h  terminal.c  terminal.h
k/io/device/: ata.c  ata.h  device.c  device.h  fscache.c  fscache.h  proc.c  proc.h
k/io/fs/: devfilesystem.c  devfilesystem.h  ext2filesystem.c  ext2filesystem.h  filesystem.c  filesystem.h  iso.h  isofilesystem.c  isofilesystem.h  kfilesystem.c  kfilesystem.h  procfilesystem.c  procfilesystem.h
k/sys/: allocator.c  allocator.h  console.c  console.h  filesystem.c  filesystem.h  gdt.c  gdt.h  idt.c  idt.h  interrupt-entry.S  interrupt-handler.c  kalloc.c  kalloc.h  kobject.c  kobject.h  mutex.c  mutex.h  paging.c  paging.h  paging2.c  paging2.h  physical-memory.c  physical-memory.h  syscall.c  syscall.h  syscalls.c  time.c  time.h
k/system/: allocator.c  allocator.h  console.c  console.h  gdt.h  idt.h  interrupt-handler.c  kobject.c  kobject.h  mutex.c  mutex.h  paging.c  paging.h  physical-memory.c  physical-memory.h  syscalls.c  time.h
k/utils/: error.c  kprintf.c  kputs.c  list.c  memcmp.c  memcpy.c  memset.c  strdup.c  string.c  stringn.c  strlen.c  strncmp.c  strncpy.c  strnlen.c
libs/libc/: CMakeLists.txt  Makefile  getopt.c  mem.c  memmove.c  printf.c  puts.c  qsort.c  stdlib.c  strcat.c  string.c  stringn.c  strncmp.c  strncpy.c
libs/libc/crt/: crt0.S  crti.c  crtn.c
libs/libc/include/: assert.h  ctype.h  dirent.h  err.h  errno-base.h  errno.h  filestream.h  fts.h  getopt.h  graphic.h  kstd.h  limits.h  regex.h  signal.h  sound.h  stdarg.h  stddef.h  stdio.h  stdlib.h  string.h  time.h  types.h  unistd.h  utils.h
libs/libc/include/kernel/: ctype.h  errno-base.h  limits.h  sound.h  stdarg.h  stddef.h  stdio.h  stdlib.h  string.h
libs/libc/include/sys/: mman.h  mount.h  signum.h  stat.h  types.h  uio.h
libs/libc/stdc/: dirent.c  errno.c  filestream-input.c  filestream.c  fts.c  getenv.c  getopt.c  graphic.c  puts.c  regex.c  signal.c  sound.c  stdio.c  strdup.c  sys.c  syscalls.c  syscalls.h  unistd.c  utils.c
libs/libc/stdc/alloc/: calloc.c  free.c  malloc.c  realloc.c
libs/libc/stdk/: mem.c  memmove.c  printf.c  qsort.c  stdlib.c  string.c  stringn.c
libs/libcurses2/: CMakeLists.txt
libs/libcurses2/include/: curses.h  curses.priv.h  ncurses_cfg.h  ncurses_def.h  ncurses_dll.h
libs/libk/: CMakeLists.txt  Makefile  didiv.c  dirent.c  errno.c  filestream-input.c  filestream.c  fts.c  getenv.c  getopt.c  graphic.c  malloc.c  puts.c  regex.c  scanf.c  sound.c  stdio.c  strdup.c  syscalls.c  syscalls.h  time.c  unistd.c  utils.c
libs/libk/alloc/: calloc.c  free.c  malloc.c  malloc.h  realloc.c  show_alloc_mem.c
libs/libk/include/: alloc.h  assert.h  dirent.h  err.h  errno.h  filestream.h  fts.h  getnbr.h  getopt.h  graphic.h  kstd.h  regex.h  scanf.h  sound.h  stdlib.h  syscallw.h  time.h  types.h  unistd.h  utils.h
roms/: CMakeLists.txt  entry.S  roms.lds
roms/chichehunter/: CMakeLists.txt  Makefile  hunter.c  test
roms/chichepong/: CMakeLists.txt
roms/chichevaders/: CMakeLists.txt
roms/ls/: my_ls.c  my_ls_fct.c
roms/minishell/: CMakeLists.txt  main.c  my_builtin.c  mysh.c  mysh_utils2.c
roms/minishell/include/: mysh.h
roms/perrodlauncher/: CMakeLists.txt  perrodlauncher.c
roms/skate/: CMakeLists.txt  skate.c
roms/yakanoid/: CMakeLists.txt  yakanoid.c
user/: CMakeLists.txt  bin-entry.S  roms.lds
user/42sh/: CMakeLists.txt
user/42sh/include/: define.h  functions.h  get_next_line.h  struct.h
user/42sh/src/: builtins.c  create_list.c  current_dir.c  env.c  exec.c  exec_built.c  exec_prg.c  list_check.c  main.c  parser.c  redir.c
user/42sh/src/parsing/: check.c  check_expr_cmplx.c  new_check.c  tools.c
user/42sh/src/tools/: get_next_line.c  memory.c  my_epur_cmd.c  my_wordtab.c  str.c  str_parser_line.c  tools.c
user/cp/: CMakeLists.txt  cp.c  extern.h  utils.c
user/ls/: CMakeLists.txt  my_ls.c  my_ls_fct.c  my_ls_fct2.c  my_ls_utils.c  my_ls_utils2.c
user/ls/include/: my_ls.h
user/ls2/: CMakeLists.txt  cmp.c  extern.h  ls.c  ls.h  print.c  utils.c
user/minishell/: CMakeLists.txt  builtin_oth.c  get_next_line.c  main.c  my_builtin.c  my_getenv.c  mysh.c  mysh_fct.c  mysh_fct_utils.c  mysh_utils.c  mysh_utils2.c
user/minishell/include/: mysh.h
user/mount/: CMakeLists.txt  mount.c  umount.c
user/nano/: CMakeLists.txt  browser.c  chars.c  color.c  cut.c  files.c  global.c  help.c  history.c  move.c  nano.c  nano.h  prompt.c  proto.h  rcfile.c  revision.h  search.c  text.c  utils.c  winio.c
user/roms/: CMakeLists.txt
user/roms/chichehunter/: CMakeLists.txt  hunter.c
user/roms/chichepong/: CMakeLists.txt  pong.c
user/roms/chichevaders/: CMakeLists.txt  vaders.c
user/roms/perrodlauncher/: CMakeLists.txt  perrodlauncher.c
user/roms/skate/: CMakeLists.txt  gfx.c  park.c  skate.c  skate.h  skater.c
user/roms/yakanoid/: CMakeLists.txt  yakanoid.c
user/toto/: CMakeLists.txt
user/toto/include/: struct.h
user/toto/src/: builtins.c  env.c  exec.c  exec_built.c  exec_prg.c  main.c  parser.c
user/toto/src/parsing/: check.c  tools.c
user/utils/: CMakeLists.txt  cat.c  cat2.c  chmod.c  link.c  mkdir.c  mount.c  rm.c  test.c  touch.c  umount.c  wc.c
(+37 files in other folders)
